--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -2,11 +2,11 @@
   <ion-card-content>
     <ion-item color="light">
       <ion-label floating>Email</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input [(ngModel)]="account.email" type="email"></ion-input>
     </ion-item>
     <ion-item color="light">
       <ion-label floating>Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input [(ngModel)]="account.password" type="password"></ion-input>
     </ion-item>
   </ion-card-content>
   <ion-row class="login-form__">
