--- a/src/components/register/register.html
+++ b/src/components/register/register.html
@@ -1,30 +1,75 @@
-<ion-card color="light">
-  <ion-card-content>
-    <ion-item color="light">
-      <ion-label floating>Avatar</ion-label>
-      <ion-input [(ngModel)]="account.avatar" type="file"></ion-input>
-    </ion-item>
-    <ion-item color="light">
-      <ion-label floating>Name</ion-label>
-      <ion-input [(ngModel)]="account.name" type="text"></ion-input>
-    </ion-item>
-    <ion-item color="light">
-      <ion-label floating>City</ion-label>
-      <ion-input [(ngModel)]="account.city" type="text"></ion-input>
-    </ion-item>
-    <ion-item color="light">
-      <ion-label floating>Email</ion-label>
-      <ion-input [(ngModel)]="account.email" type="email"></ion-input>
-    </ion-item>
-    <ion-item color="light">
-      <ion-label floating>Password</ion-label>
-      <ion-input [(ngModel)]="account.password" type="password"></ion-input>
-    </ion-item>
-  </ion-card-content>
-  <ion-row>
-    <div>
-      <button ion-button color="custom" (click)="cancel()">Cancel</button>
-      <button ion-button color="secondary" (click)="registerUser()">Register</button>
-    </div>
-  </ion-row>
-</ion-card>
+<form #registerForm="ngForm" novalidate>
+  <ion-card color="light">
+    <ion-card-content>
+      <ion-item color="light">
+        <ion-label floating>Avatar</ion-label>
+        <ion-input [(ngModel)]="account.avatar" type="file"></ion-input>
+      </ion-item>
+      <ion-item color="light">
+        <ion-label floating>Name</ion-label>
+        <ion-input 
+        [(ngModel)]="account.name" 
+        type="text"
+        name="name"
+        #name="ngModel"
+        required
+        ></ion-input>
+      </ion-item>
+
+      <div padding *ngIf="name.invalid && name.dirty">
+        <span style="color: red;">Name incorrectly.</span>
+      </div>
+
+      <ion-item color="light">
+        <ion-label floating>City</ion-label>
+        <ion-input 
+        [(ngModel)]="account.city" 
+        type="text"
+        name="city"
+        #city="ngModel"
+        required
+        ></ion-input>
+      </ion-item>
+
+      <div padding *ngIf="city.invalid && city.dirty">
+        <span style="color: red;">City not found !</span>
+      </div>
+
+      <ion-item color="light">
+        <ion-label floating>Email</ion-label>
+        <ion-input 
+        [(ngModel)]="account.email" 
+        type="email"
+        name="email" 
+        #email="ngModel"
+        required
+        ></ion-input>
+      </ion-item>
+
+      <div padding *ngIf="email.invalid && email.dirty">
+        <span style="color: red;">Email adress is not valid !</span>
+      </div>
+
+      <ion-item color="light">
+        <ion-label floating>Password</ion-label>
+        <ion-input 
+        [(ngModel)]="account.password" 
+        type="password"
+        name="password"
+        #password="ngModel"
+        required
+        ></ion-input>
+      </ion-item>
+
+      <div padding *ngIf="password.invalid && password.dirty">
+        <span style="color: red;">Password must be at least 6 characters.</span>
+      </div>
+    </ion-card-content>
+    <ion-row>
+      <div>
+        <button ion-button color="custom" (click)="cancel()">Cancel</button>
+        <button ion-button color="secondary" (click)="registerUser()" [disabled]="registerForm.invalid">Register</button>
+      </div>
+    </ion-row>
+  </ion-card>
+</form>
